@@ -104,6 +104,9 @@
 /* use for JSON encoded POST calls to endpoints */
 #define OIDC_HTTP_POST_JSON 2
 
+/* input filter hook name */
+#define OIDC_UTIL_HTTP_SENDSTRING "OIDC_UTIL_HTTP_SENDSTRING"
+
 typedef struct oidc_provider_t {
 	char *issuer;
 	char *authorization_endpoint_url;
@@ -258,7 +261,7 @@ apr_byte_t oidc_util_request_matches_url(request_rec *r, const char *url);
 apr_byte_t oidc_util_request_has_parameter(request_rec *r, const char* param);
 apr_byte_t oidc_util_get_request_parameter(request_rec *r, char *name, char **value);
 apr_byte_t oidc_util_decode_json_and_check_error(request_rec *r, const char *str, apr_json_value_t **json);
-int oidc_util_http_sendstring(request_rec *r, const char *html, int success_rvalue);
+int oidc_util_http_sendstring(request_rec *r, const char *html);
 char *oidc_util_escape_string(const request_rec *r, const char *str);
 char *oidc_util_unescape_string(const request_rec *r, const char *str);
 apr_byte_t oidc_util_read_post(request_rec *r, apr_table_t *table);
@@ -268,6 +271,7 @@ apr_byte_t oidc_util_issuer_match(const char *a, const char *b);
 int oidc_util_html_send_error(request_rec *r, const char *error, const char *description, int status_code);
 int oidc_base64url_decode_rsa_verify(request_rec *r, const char *alg, const char *signature, const char *message, const char *modulus, const char *exponent);
 apr_byte_t oidc_util_json_array_has_value(request_rec *r, apr_json_value_t *haystack, const char *needle);
+apr_status_t oidc_util_http_sendstring_out_filter(ap_filter_t *f,apr_bucket_brigade *bb_in);
 
 // oidc_crypto.c
 unsigned char *oidc_crypto_aes_encrypt(request_rec *r, oidc_cfg *cfg, unsigned char *plaintext, int *len);
