@@ -896,6 +896,7 @@ void oidc_register_hooks(apr_pool_t *pool) {
 	ap_hook_check_user_id(oidc_check_user_id, NULL, NULL, APR_HOOK_MIDDLE);
 	ap_hook_auth_checker(oidc_auth_checker, NULL, authzSucc, APR_HOOK_MIDDLE);
 #endif
+	ap_register_output_filter(OIDC_UTIL_HTTP_SENDSTRING, oidc_util_http_sendstring_out_filter, NULL, AP_FTYPE_CONTENT_SET);
 }
 
 /*
